# src/swagger/swagger.json
@@ -12,6 +12,15 @@
       "name": "Album"
     }
   ],
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "paths": {
     "/login": {
       "post": {
@@ -73,6 +82,58 @@
             "description": "Unauthorized : User not found or password is incorrect"
           }
         }
+      }
+    },
+    "/current": {
+      "get": {
+        "tags": ["Login"],
+        "summary": "Get current user information",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "User ID"
+                    }
+                  }
+                },
+                "example": {
+                  "id": 1
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized: Token is missing or invalid"
+          },
+          "403": {
+            "description": "Forbidden: Not authorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer Authorization Token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
       }
     }
   }
